<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="bugFreak_api_key" tools:ignore="TypographyDashes">2537eed2-36fd-4d9c-9ca9-54db031126fd</string>
    <string name="bugFreak_token">520cca3028e18700b0000006</string>
    <string name="bugFreak_service_endpoint">http://errors.omnipasteapp.com/v1/api/errors</string>
    <string name="apiUrl">http://10.0.2.2:3000/api</string>

    <string name="app_name">Omnipaste</string>

    <string name="text_service_connected">connected</string>
    <string name="text_service_disconnected">disconnected</string>
    <string name="text_service_connecting">connecting</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="startOmnipasteService">com.omnipasteapp.intent.action.START_OMNIPASTE_SERVICE</string>
    <string name="stopOmnipasteService">com.omnipasteapp.intent.action.STOP_OMNIPASTE_SERVICE</string>
    <string name="startOmniService">com.omnipasteapp.intent.action.START_OMNI_SERVICE</string>
    <string name="stopOmniService">com.omnipasteapp.intent.action.STOP_OMNI_SERVICE</string>
    <string name="omnipasteServiceStatusChanged">com.omnipasteapp.intent.action.OMNIPASTE_SERVICE_STATUS_CHANGED</string>
    <string name="omnipasteDataReceived">com.omnipasteapp.intent.action.OMNIPASTE_DATA_RECEIVED</string>

    <string name="title_activity_login">Login</string>
    <string name="login_header">Tap on the account you wish to login with:</string>
    <string name="login_footer">You need to use the same account for the other clients also.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_exit_message">Clicking OK will terminate the synchronization with your other devices.</string>

    <!--Clipping list item-->
    <string name="senderImageViewDescription">Sender</string>
    <string name="typeButtonDescription">Action</string>
</resources>
