<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:minHeight="?attr/listPreferredItemHeight"
              android:orientation="horizontal"
              android:divider="@drawable/divider"
              android:showDividers="middle"
              android:dividerPadding="@dimen/dividerPadding"
              android:descendantFocusability="blocksDescendants">

    <ImageView
            android:id="@+id/sender_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="?attr/ic_local"
            android:contentDescription="@string/senderImageViewDescription"/>

    <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="?attr/listPreferredItemPaddingStart"
            android:layout_marginLeft="?attr/listPreferredItemPaddingLeft"
            android:ellipsize="end"
            android:text="@string/app_name"/>

    <ImageButton
            android:id="@+id/action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:visibility="gone"
            android:contentDescription="@string/typeButtonDescription"/>

</LinearLayout>