<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        tools:context=".LoginActivity"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:background="@drawable/activity_login_header_gradient">

        <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_footer_height"
            android:background="@layout/activity_login_footer"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@id/header"
            android:layout_above="@id/footer">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:paddingStart="?attr/listPreferredItemPaddingStart"
                android:paddingEnd="?attr/listPreferredItemPaddingEnd"
                android:text="@string/login_header"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:textStyle="italic"
                android:paddingStart="?attr/listPreferredItemPaddingStart"
                android:paddingEnd="?attr/listPreferredItemPaddingEnd"
                android:text="@string/login_footer"/>

        <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/accountsListView" />
    </LinearLayout>
</RelativeLayout>
